update  vue通信  inject provide

--- a/mobile/src/assets/style/common.less
+++ b/mobile/src/assets/style/common.less
@@ -25,3 +25,16 @@
 #app {
     -webkit-overflow-scrolling: touch;
 }
+.fl{
+    float: left;
+}
+.fr{
+    float: right;
+}
+.html{
+    font-size: 16px;
+    line-height: 1.4em;
+    img{
+        max-width: 100%;
+    }
+}
