--- a/code/src/assets/style/common.less
+++ b/code/src/assets/style/common.less
@@ -1,5 +1,8 @@
 
-
+*{
+  margin: 0;
+  padding: 0;
+}
 
 .fl {
   float: left;
@@ -21,7 +24,7 @@
 
 .w1200 {
   margin  : auto;
-  width   : 1360px;
+  width   : 1200px;
   position: relative;
 }
 .w1360 {
@@ -65,7 +68,7 @@
   padding:30px 0;
   min-height: 300px;
   img{
-    width: 100% !important;
+    max-width: 100% !important;
   }
 }
 .red{
